<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guideLayout1"
    style="@style/layout_guide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/purple"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/guia_bienvenido"
        android:textColor="@color/white"
        android:textSize="44sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/guia_primer_texto_intro"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="254dp"
        android:layout_height="112dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:src="@drawable/logo_spyro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:text="@string/guia_Segundo_texto_intro"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:text="@string/guia_tercer_texto_intro"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:text="@string/guia_cuarto_texto_intro"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="254dp"
        android:layout_height="112dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="480dp"
        android:src="@drawable/spyro_volando" />

    <Button
        android:id="@+id/button_start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="600dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/guia_boton_comenzar_intro"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</FrameLayout>
