<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guideLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:visibility="gone">

     <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/guia_titulo_resumen"
        android:textStyle="bold"
        android:textSize="40sp"
         android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
         android:textColor="@color/white"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginLeft="20dp"
        android:src="@android:drawable/checkbox_on_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia_texto1_resumen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="50dp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:layout_marginLeft="20dp"
        android:src="@android:drawable/checkbox_on_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia_texto2_resumen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="50dp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:layout_marginLeft="20dp"
        android:src="@android:drawable/checkbox_on_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia_texto3_resumen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="50dp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="285dp"
        android:layout_marginLeft="20dp"
        android:src="@android:drawable/checkbox_on_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia_texto4_resumen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="50dp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="335dp"
        android:layout_marginLeft="20dp"
        android:src="@android:drawable/checkbox_on_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia_texto5_resumen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="50dp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="385dp"
        android:layout_marginLeft="20dp"
        android:src="@android:drawable/checkbox_on_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guia_texto6_resumen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="50dp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/exit_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="460dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/guia_boton_cerrar_resumen"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</FrameLayout>